# opengl-vao-test

./: CMakeLists.txt  README.md  main.c  shaderparse.c  shaderparse.h
res/shaders/: basic.shader
utils/: CMakeLists.txt  fileio.c  fileio.h  gl-debug.c  gl-debug.h  linkedlist.c  linkedlist.h
